Fix the width and update the layout of ranges dropdown. Make ranges data properly align with headers. - In widgets.js (line 769-789), create getPaddingValFromDigitsInFraction   to get the padding-right value for ranges data based on its number of   digits. The value will be used to properly align the ranges data and   header. - In widgets.js (line 715-767), update alignRangesDataByDecimalPoint to   add padding-right values for each data item. This will properly align   each data with headers. - In opus.css (line 1987), set width of ranges dropdown to 500px when browser   window is wide. This will make sure the width of ranges dropdown stays   the same when data in any category is expanded/collapsed.

--- a/opus/application/static_media/css/opus.css
+++ b/opus/application/static_media/css/opus.css
@@ -1983,7 +1983,8 @@ ul.ui-autocomplete a.ui-state-active {
     overflow-x: hidden;
     border-width: 2px;
     /* Set the width of ranges dropdown */
-    width: max-content;
+    /* width: max-content; */
+    width: 500px;
     max-width: 110%;
     word-break: keep-all;
 }
@@ -2027,11 +2028,6 @@ ul.ui-autocomplete a.ui-state-active {
     white-space: nowrap;
 }
 
-/* Make sure the fractional part of ranges data is not cutoff */
-.op-preprogrammed-ranges-data-item {
-    padding-right: 2em;
-}
-
 /* This class will be assigned to ranges name with long first word */
 .op-word-break-all {
     word-break: break-all;
@@ -2040,11 +2036,6 @@ ul.ui-autocomplete a.ui-state-active {
 /* Create spaces between long ranges names and min values */
 .op-preprogrammed-ranges-data-name {
     padding-right: 2em;
-}
-
-/* Create spaces between long ranges names and min values */
-.op-preprogrammed-ranges-min-data {
-    padding-left: 2em;
 }
 
 /* Styling required to make ranges data aligned by decimal point */
